# LangGenie

./: .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push-images.yml  build-backend-docker-image.yml
backend/: .dockerignore  Dockerfile  New Text Document.txt  README.md  app.py  dev_requirements.txt  docker-compose.yml  main.py  prod_requirements.txt  pyproject.toml  requirements.txt
backend/research/: RAG_trails.ipynb  Wiki_ArxivAgent.ipynb
backend/source/: rag.py  tool_agent.py
backend/tests/: test_rag.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx  Constants.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/Landing/: page.tsx
frontend/src/app/Navbar/: page.tsx
frontend/src/components/: Card.tsx  CardList.tsx  ChatContainer.tsx  FileUpload.js  Footer.js  Footer.tsx  Navbar.js  Navbar.tsx  ToolChat.tsx  Upload.tsx  fileUpload.css
frontend/src/components/FileUpload/: FileUpload.tsx
frontend/src/components/Navbar/: Navbar.js  Navbar.tsx
frontend/src/components/ServiceCarousal/: ServiceCarousal.tsx
frontend/src/pages/: Home.tsx  RagChain.js  RagChain.tsx  ToolAgent.js  ToolAgent.tsx
frontend/src/pages/Home/: Home.css  Home.js  Home.tsx
ollama/: Dockerfile  pull-llama3.sh  pull-llama3_1.sh
research/: RAG_trails.ipynb
source/: rag.py
src/langgenie/: rag.py  tool_agent.py
