[project]
name = "langgenie_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "amulyaprasanth",email = "amulyaprasanth301@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-core (>=0.3.45,<0.4.0)",
    "langchain-groq (>=0.2.5,<0.3.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "fastembed (>=0.6.0,<0.7.0)",
    "langchain-text-splitters (>=0.3.7,<0.4.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "arxiv (>=2.1.3,<3.0.0)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "arxiv (>=2.1.3,<3.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^8.3.5"

[tool.poetry]
packages = [
    { include = "langgenie_backend"}
]
